Run DynComp agent with --enable-preview for java 24.